--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ HTML elements label pieces of content such as "this is a heading", "this is a pa
             </aside>
     </div>
     <footer class="footer">
-        <h1 style="text-align:center;">Developed By @</h1>
+        <h1 style="text-align:center;">Developed By @ P BHARATH KUMAR REDDY</h1>
     </footer> 
 </body>
 </html>
